--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
             <input type="radio" name="r" id="r3">
             <input type="radio" name="r" id="r4">
 
-            <div class="slide s1"><img src="images\sushi.webp" alt=""></div>
-            <div class="slide "><img src="images\pizza.webp" alt=""></div>
-            <div class="slide"><img src="images\krylyshki.webp" alt=""></div>
-            <div class="slide"><img src="images\sousy.webp" alt=""></div>
+            <div class="slide s1"><a href="sushi.html"><img src="images\sushi.webp" alt="photo"></a></div>
+            <div class="slide "><a href="pizza.html"><img src="images\pizza.webp" alt="photo"></a></div>
+            <div class="slide"><a href="fastFood.html"><img src="images\krylyshki.webp" alt=""></a></div>
+            <div class="slide"><a href="sous.html"><img src="images\sousy.webp" alt=""></a></div>
         </div>
             <div class="btn"><button class="button">sadfsdfs</button></div>
         <div class="navigation">
