--- a/sous.html
+++ b/sous.html
@@ -49,6 +49,7 @@
                 </div>
             </div>
         </div>
+        ррр
         <div class="mini-containere soda-souse">
             <img src="imgFiles/sousess/2022-05-24T12_09_29.600Z-krasnyy-ili-belyy-imbir1.jpg" alt="photo" class="mini-photo_souse" style="margin-bottom: 150px;">
             <h3>Кавасаки</h3>
