--- a/sous.html
+++ b/sous.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="final.css">
 </head>
 <body>
+    авлыфалвытфатвфыф
     <button class="goBack"><a href="index.html">Go back</a></button>
     <h1 style="margin-left: 250px;">Соусы</h1>
     <div class="main">
@@ -49,7 +50,6 @@
                 </div>
             </div>
         </div>
-        ррр
         <div class="mini-containere soda-souse">
             <img src="imgFiles/sousess/2022-05-24T12_09_29.600Z-krasnyy-ili-belyy-imbir1.jpg" alt="photo" class="mini-photo_souse" style="margin-bottom: 150px;">
             <h3>Кавасаки</h3>
