--- a/sous.html
+++ b/sous.html
@@ -12,11 +12,11 @@
     <h1 style="margin-left: 250px;">Соусы</h1>
     <div class="main">
         <div class="mini-containere soda-souse">
-            <img src="imgFiles/sousess/2022-05-24T11_53_05.360Z-soy-sauce-isolated-on-white-background_88281-372.webp" alt="photo" class="mini-photo_souse" style="margin-bottom: 160px;">
+            <img src="imgFiles/sousess/2022-05-24T11_53_05.360Z-soy-sauce-isolated-on-white-background_88281-372.webp" alt="photo" class="mini-photo_souse" style="margin-bottom: 80px;">
             <h3>Филадельфия</h3>
             <p class="opisanie">семга, сыр</p>
             <div class="price-container">
-                <p class="price">500 &#8381;</p> 
+                <p class="price">500 &#8381;</p>
                 <button class="korzina" id="kor">В корзину</button>
             </div>
         </div>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="mini-containere soda-souse">
-            <img src="imgFiles/sousess/2022-05-24T11_54_38.219Z-очень-вкусный-соус-тартара-в-шаре-на-белизне-белой-предпосылке-152568988.jpg" alt="photo" class="mini-photo_souse" style="margin-bottom: 150px;">
+            <img src="imgFiles/sousess/2022-05-24T11_54_38.219Z-очень-вкусный-соус-тартара-в-шаре-на-белизне-белой-предпосылке-152568988.jpg" alt="photo" class="mini-photo_souse" style="margin-bottom: 80px;">
             <h3>Онигара</h3>
             <p class="opisanie">угорь, унаги соус, кунжут, сыр</p>
             <div class="price-container">
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="mini-containere soda-souse">
-            <img src="imgFiles/sousess/2022-05-24T11_55_02.006Z-images.jpg" alt="photo" class="mini-photo_souse" style="padding: 60px 0 35px 0; border-radius: 15px;">
+            <img src="imgFiles/sousess/2022-05-24T11_55_02.006Z-images.jpg" alt="photo" class="mini-photo_souse" style="padding: 25px; border-radius: 15px; height: 250px; width: 200px;">
             <h3>Дракон</h3>
             <div class="dd">
                 <p class="opisanie">угорь, краб, огурец</p>
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="mini-containere soda-souse">
-            <img src="imgFiles/sousess/2022-05-24T12_09_29.600Z-krasnyy-ili-belyy-imbir1.jpg" alt="photo" class="mini-photo_souse" style="margin-bottom: 150px;">
+            <img src="imgFiles/sousess/2022-05-24T12_09_29.600Z-krasnyy-ili-belyy-imbir1.jpg" alt="photo" class="mini-photo_souse" style="margin-bottom: 80px;">
             <h3>Кавасаки</h3>
             <p class="opisanie">жаренный лосось, блинчик, сыр</p>
             <div class="price-container">
