--- a/sous.html
+++ b/sous.html
@@ -12,7 +12,7 @@
     <h1 style="margin-left: 250px;">Соусы</h1>
     <div class="main">
         <div class="mini-containere soda-souse">
-            <img src="imgFiles/sousess/2022-05-24T11_53_05.360Z-soy-sauce-isolated-on-white-background_88281-372.webp" alt="photo" class="mini-photo_souse" style="margin-bottom: 80px;">
+            <img src="imgFiles/sousess/2022-05-24T11_53_05.360Z-soy-sauce-isolated-on-white-background_88281-372.webp" alt="photo" class="mini-photo_souse">
             <h3>Филадельфия</h3>
             <p class="opisanie">семга, сыр</p>
             <div class="price-container">
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="mini-containere soda-souse">
-            <img src="imgFiles/sousess/2022-05-24T11_53_21.346Z-2136.jpg" alt="photo" class="mini-photo_souse" style="margin-bottom: 95px;">
+            <img src="imgFiles/sousess/2022-05-24T11_53_21.346Z-2136.jpg" alt="photo" class="mini-photo_souse">
             <h3>ПФила с огурцами</h3>
             <p class="opisanie">сыр моцарелла, куриное филе</p>
             <div class="price-container">
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="mini-containere soda-souse">
-            <img src="imgFiles/sousess/2022-05-24T11_54_38.219Z-очень-вкусный-соус-тартара-в-шаре-на-белизне-белой-предпосылке-152568988.jpg" alt="photo" class="mini-photo_souse" style="margin-bottom: 80px;">
+            <img src="imgFiles/sousess/2022-05-24T11_54_38.219Z-очень-вкусный-соус-тартара-в-шаре-на-белизне-белой-предпосылке-152568988.jpg" alt="photo" class="mini-photo_souse">
             <h3>Онигара</h3>
             <p class="opisanie">угорь, унаги соус, кунжут, сыр</p>
             <div class="price-container">
